<resources>
    <string name="app_name">Sky Observer</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="month">Month:</string>

    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
...
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="src_port">Source:</string>
    <string name="dst_port">Destination:</string>
    <string name="show_taxes_and_fees">Show prices with taxes and fees</string>
    <string name="failed_to_get_prices_message">Failed to get prices!!!</string>
    <string name="invalid_date_message">Invalid date!!!</string>
    <string name="day">Day:</string>
    <string name="outbound_date">Outbound date:</string>
    <string name="inbound_date">Inbound date:</string>
    <string name="find_flights">Find Flights</string>
    <string name="return_trip">Return trip</string>
    <string name="string_place_holder">String place holder</string>
...
