...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/list_view_best_price_background"
    android:orientation="vertical">

    <ExpandableListView
        android:id="@+id/lst_best_destinations"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/list_view_best_price_background"
        android:divider="@android:color/white"
        android:dividerHeight="@dimen/grid_view_price_vertical_spacing"
        android:layout_marginEnd="@dimen/grid_view_price_horizontal_spacing"
...
